<resources>
    <string name="app_name">MyPaint</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="customize">Customize</string>
    <string name="undo_button">undo button</string>
    <string name="thickness">Thickness:</string>
    <string name="rectangle">Rectangle</string>
    <string name="oval">Oval</string>
    <string name="triangle">Triangle</string>
    <string name="default_line">Default line</string>
    <string name="purple_color">Purple color</string>
    <string name="black_color">Black color</string>
    <string name="yellow_color">Yellow color</string>
    <string name="green_color">Green color</string>
    <string name="blue_color">Blue color</string>
    <string name="red_color">Red color</string>
    <string name="straight_line">Straight line</string>
    <string name="redo_button">redo button</string>
    <string name="delete_button">delete button</string>
    <string name="save_button">save button</string>
    <string name="export_vector_path">export vector path</string>
    <string name="erase_button">erase button</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_button">settings button</string>
    <string name="cancel_button">cancel button</string>
    <string name="save_image_dialog_hint_edittext">Write here file name without extension</string>
</resources>